accordion section Done

--- a/index.html
+++ b/index.html
@@ -1307,11 +1307,11 @@
             </div>
             <div class="w-8/12 mx-auto acoordion-section mt-65px">
                 <!-- Accordion -->
-                <div class="_edumy_faq_accordion">
+                <div class="_edumy_faq_accordion border-b border-b-primary-300 mb-5 last:mb-0">
                     <div class="_edumy_faq_accordion_header flex justify-between items-center">
-                        <h4>1. What do you offer for a learner?</h4>
-                        <button class="w-9 h-9 rounded-full bg-primary/10 flex justify-center items-center">
-                            <span class="_edumy_faq_accordion_minus">
+                        <h4 class="text-22px text-dark underline decoration-dark font-semibold">1. What do you offer for a learner?</h4>
+                        <button type="button" class="w-9 h-9 rounded-full bg-primary/10 flex justify-center items-center">
+                            <span class="duration-300  hidden">
                                 <svg width="14" height="2" viewBox="0 0 14 2" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -1319,7 +1319,7 @@
                                         fill="#309255" />
                                 </svg>
                             </span>
-                            <span class="_edumy_faq_accordion_plus">
+                            <span class="duration-300 ">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -1330,9 +1330,128 @@
                         </button>
                     </div>
                     <div class="_edumy_faq_accordion_body">
-
+                        <div class="pt-11px pb-5">
+                            <p class="text-base text-lightGray leading-6">We offered category wise demandable courses with expert mentors.</p>
+                        </div>
                     </div>
                 </div>
+                <!-- Accordion -->
+                <div class="_edumy_faq_accordion border-b border-b-primary-300 mb-5 last:mb-0">
+                    <div class="_edumy_faq_accordion_header flex justify-between items-center">
+                        <h4 class="text-22px text-dark underline decoration-dark font-semibold">1. What do you offer for a learner?</h4>
+                        <button type="button" class="w-9 h-9 rounded-full bg-primary/10 flex justify-center items-center">
+                            <span class="duration-300  hidden">
+                                <svg width="14" height="2" viewBox="0 0 14 2" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M13 1.998H1C0.734784 1.998 0.48043 1.89264 0.292893 1.70511C0.105357 1.51757 0 1.26322 0 0.998001C0 0.732785 0.105357 0.478431 0.292893 0.290895C0.48043 0.103358 0.734784 -0.0019989 1 -0.0019989H13C13.2652 -0.0019989 13.5196 0.103358 13.7071 0.290895C13.8946 0.478431 14 0.732785 14 0.998001C14 1.26322 13.8946 1.51757 13.7071 1.70511C13.5196 1.89264 13.2652 1.998 13 1.998Z"
+                                        fill="#309255" />
+                                </svg>
+                            </span>
+                            <span class="duration-300 ">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M18 12.998H13V17.998C13 18.2632 12.8946 18.5176 12.7071 18.7051C12.5196 18.8926 12.2652 18.998 12 18.998C11.7348 18.998 11.4804 18.8926 11.2929 18.7051C11.1054 18.5176 11 18.2632 11 17.998V12.998H6C5.73478 12.998 5.48043 12.8926 5.29289 12.7051C5.10536 12.5176 5 12.2632 5 11.998C5 11.7328 5.10536 11.4784 5.29289 11.2909C5.48043 11.1034 5.73478 10.998 6 10.998H11V5.998C11 5.73278 11.1054 5.47843 11.2929 5.29089C11.4804 5.10336 11.7348 4.998 12 4.998C12.2652 4.998 12.5196 5.10336 12.7071 5.29089C12.8946 5.47843 13 5.73278 13 5.998V10.998H18C18.2652 10.998 18.5196 11.1034 18.7071 11.2909C18.8946 11.4784 19 11.7328 19 11.998C19 12.2632 18.8946 12.5176 18.7071 12.7051C18.5196 12.8926 18.2652 12.998 18 12.998Z"
+                                        fill="#309255" />
+                                </svg>
+                            </span>
+                        </button>
+                    </div>
+                    <div class="_edumy_faq_accordion_body">
+                        <div class="pt-11px pb-5">
+                            <p class="text-base text-lightGray leading-6">We offered category wise demandable courses with expert mentors.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Accordion -->
+                <div class="_edumy_faq_accordion border-b border-b-primary-300 mb-5 last:mb-0">
+                    <div class="_edumy_faq_accordion_header flex justify-between items-center">
+                        <h4 class="text-22px text-dark underline decoration-dark font-semibold">1. What do you offer for a learner?</h4>
+                        <button type="button" class="w-9 h-9 rounded-full bg-primary/10 flex justify-center items-center">
+                            <span class="duration-300  hidden">
+                                <svg width="14" height="2" viewBox="0 0 14 2" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M13 1.998H1C0.734784 1.998 0.48043 1.89264 0.292893 1.70511C0.105357 1.51757 0 1.26322 0 0.998001C0 0.732785 0.105357 0.478431 0.292893 0.290895C0.48043 0.103358 0.734784 -0.0019989 1 -0.0019989H13C13.2652 -0.0019989 13.5196 0.103358 13.7071 0.290895C13.8946 0.478431 14 0.732785 14 0.998001C14 1.26322 13.8946 1.51757 13.7071 1.70511C13.5196 1.89264 13.2652 1.998 13 1.998Z"
+                                        fill="#309255" />
+                                </svg>
+                            </span>
+                            <span class="duration-300 ">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M18 12.998H13V17.998C13 18.2632 12.8946 18.5176 12.7071 18.7051C12.5196 18.8926 12.2652 18.998 12 18.998C11.7348 18.998 11.4804 18.8926 11.2929 18.7051C11.1054 18.5176 11 18.2632 11 17.998V12.998H6C5.73478 12.998 5.48043 12.8926 5.29289 12.7051C5.10536 12.5176 5 12.2632 5 11.998C5 11.7328 5.10536 11.4784 5.29289 11.2909C5.48043 11.1034 5.73478 10.998 6 10.998H11V5.998C11 5.73278 11.1054 5.47843 11.2929 5.29089C11.4804 5.10336 11.7348 4.998 12 4.998C12.2652 4.998 12.5196 5.10336 12.7071 5.29089C12.8946 5.47843 13 5.73278 13 5.998V10.998H18C18.2652 10.998 18.5196 11.1034 18.7071 11.2909C18.8946 11.4784 19 11.7328 19 11.998C19 12.2632 18.8946 12.5176 18.7071 12.7051C18.5196 12.8926 18.2652 12.998 18 12.998Z"
+                                        fill="#309255" />
+                                </svg>
+                            </span>
+                        </button>
+                    </div>
+                    <div class="_edumy_faq_accordion_body">
+                        <div class="pt-11px pb-5">
+                            <p class="text-base text-lightGray leading-6">We offered category wise demandable courses with expert mentors.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Accordion -->
+                <div class="_edumy_faq_accordion border-b border-b-primary-300 mb-5 last:mb-0">
+                    <div class="_edumy_faq_accordion_header flex justify-between items-center">
+                        <h4 class="text-22px text-dark underline decoration-dark font-semibold">1. What do you offer for a learner?</h4>
+                        <button type="button" class="w-9 h-9 rounded-full bg-primary/10 flex justify-center items-center">
+                            <span class="duration-300  hidden">
+                                <svg width="14" height="2" viewBox="0 0 14 2" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M13 1.998H1C0.734784 1.998 0.48043 1.89264 0.292893 1.70511C0.105357 1.51757 0 1.26322 0 0.998001C0 0.732785 0.105357 0.478431 0.292893 0.290895C0.48043 0.103358 0.734784 -0.0019989 1 -0.0019989H13C13.2652 -0.0019989 13.5196 0.103358 13.7071 0.290895C13.8946 0.478431 14 0.732785 14 0.998001C14 1.26322 13.8946 1.51757 13.7071 1.70511C13.5196 1.89264 13.2652 1.998 13 1.998Z"
+                                        fill="#309255" />
+                                </svg>
+                            </span>
+                            <span class="duration-300 ">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M18 12.998H13V17.998C13 18.2632 12.8946 18.5176 12.7071 18.7051C12.5196 18.8926 12.2652 18.998 12 18.998C11.7348 18.998 11.4804 18.8926 11.2929 18.7051C11.1054 18.5176 11 18.2632 11 17.998V12.998H6C5.73478 12.998 5.48043 12.8926 5.29289 12.7051C5.10536 12.5176 5 12.2632 5 11.998C5 11.7328 5.10536 11.4784 5.29289 11.2909C5.48043 11.1034 5.73478 10.998 6 10.998H11V5.998C11 5.73278 11.1054 5.47843 11.2929 5.29089C11.4804 5.10336 11.7348 4.998 12 4.998C12.2652 4.998 12.5196 5.10336 12.7071 5.29089C12.8946 5.47843 13 5.73278 13 5.998V10.998H18C18.2652 10.998 18.5196 11.1034 18.7071 11.2909C18.8946 11.4784 19 11.7328 19 11.998C19 12.2632 18.8946 12.5176 18.7071 12.7051C18.5196 12.8926 18.2652 12.998 18 12.998Z"
+                                        fill="#309255" />
+                                </svg>
+                            </span>
+                        </button>
+                    </div>
+                    <div class="_edumy_faq_accordion_body">
+                        <div class="pt-11px pb-5">
+                            <p class="text-base text-lightGray leading-6">We offered category wise demandable courses with expert mentors.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Accordion -->
+                <div class="_edumy_faq_accordion border-b border-b-primary-300 mb-5 last:mb-0">
+                    <div class="_edumy_faq_accordion_header flex justify-between items-center">
+                        <h4 class="text-22px text-dark underline decoration-dark font-semibold">1. What do you offer for a learner?</h4>
+                        <button type="button" class="w-9 h-9 rounded-full bg-primary/10 flex justify-center items-center">
+                            <span class="duration-300  hidden">
+                                <svg width="14" height="2" viewBox="0 0 14 2" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M13 1.998H1C0.734784 1.998 0.48043 1.89264 0.292893 1.70511C0.105357 1.51757 0 1.26322 0 0.998001C0 0.732785 0.105357 0.478431 0.292893 0.290895C0.48043 0.103358 0.734784 -0.0019989 1 -0.0019989H13C13.2652 -0.0019989 13.5196 0.103358 13.7071 0.290895C13.8946 0.478431 14 0.732785 14 0.998001C14 1.26322 13.8946 1.51757 13.7071 1.70511C13.5196 1.89264 13.2652 1.998 13 1.998Z"
+                                        fill="#309255" />
+                                </svg>
+                            </span>
+                            <span class="duration-300 ">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M18 12.998H13V17.998C13 18.2632 12.8946 18.5176 12.7071 18.7051C12.5196 18.8926 12.2652 18.998 12 18.998C11.7348 18.998 11.4804 18.8926 11.2929 18.7051C11.1054 18.5176 11 18.2632 11 17.998V12.998H6C5.73478 12.998 5.48043 12.8926 5.29289 12.7051C5.10536 12.5176 5 12.2632 5 11.998C5 11.7328 5.10536 11.4784 5.29289 11.2909C5.48043 11.1034 5.73478 10.998 6 10.998H11V5.998C11 5.73278 11.1054 5.47843 11.2929 5.29089C11.4804 5.10336 11.7348 4.998 12 4.998C12.2652 4.998 12.5196 5.10336 12.7071 5.29089C12.8946 5.47843 13 5.73278 13 5.998V10.998H18C18.2652 10.998 18.5196 11.1034 18.7071 11.2909C18.8946 11.4784 19 11.7328 19 11.998C19 12.2632 18.8946 12.5176 18.7071 12.7051C18.5196 12.8926 18.2652 12.998 18 12.998Z"
+                                        fill="#309255" />
+                                </svg>
+                            </span>
+                        </button>
+                    </div>
+                    <div class="_edumy_faq_accordion_body">
+                        <div class="pt-11px pb-5">
+                            <p class="text-base text-lightGray leading-6">We offered category wise demandable courses with expert mentors.</p>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
         </div>
     </section>
