--- a/index.html
+++ b/index.html
@@ -1457,6 +1457,31 @@
     </section>
     <!-- FAQ Edumy End  -->
 
+    <!-- Newsletter Edumy start  -->
+    <section class="newsletter _edumy_section_gap mb-10">
+        <div class="container">
+            <div class="bg-[#202020] rounded-25px pt-10 pb-85px">
+                    <div>
+                        <h2 class="_edumy_section_title text-white text-40px text-center decoration-white mb-3">Sign Up To Our Newsletter</h2>
+                        <p class="text-white text-lg leading-7 underline decoration-white text-center max-w-[418px] mx-auto">Subscribe to our newsletter and get manyinteresting things every week</p>
+                    </div>
+                    <div class="mt-10">
+                        <div class="w-fit flex items-center gap-x-2.5 p-2.5 bg-white rounded mx-auto">
+                            <input type="text" placeholder="Write your email here" class="bg-[#F5F7FA] font-hindSiliguri rounded p-4 text-lg text-lightGray w-[465px] placeholder:text-lightGray placeholder:underline placeholder:decoration-lightGray placeholder:opacity-100">
+                            <button type="button" class="bg-secondary px-9 py-4 rounded font-hindSiliguri text-lg text-white underline decoration-white">Subscribe</button>
+                        </div>
+                    </div>
+            </div>  
+        </div>
+    </section>
+    <!-- Newsletter Edumy End  -->
+
+    <!-- Footer Edumy Start  -->
+    <footer class="footer _edumy_section_gap" id="footer">
+
+    </footer>
+    <!-- Footer Edumy End  -->
+
 
     <!-- Custom JS -->
     <script src="./assets/"></script>
