--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                         </div>
                     </div>
                     <div class="w-full lg:w-1/2 xl:w-5/12 order-first lg:order-last">
-                        <div class="image-section relative pt-10 lg:pt-0">
+                        <div class="image-section relative pt-10 lg:py-10 xl:py-0">
                             <img src="./assets/images/hero/hero-image.png" alt="hero-image"
                                 class="xl:absolute top-50px -right-10 xl:max-w-[549px]">
                             <img src="./assets/images/hero/shape.svg" alt="arrow shape"
@@ -222,45 +222,45 @@
                     <h2 class="_edumy_section_title text-center mx-auto sm:max-w-[591px]">
                         Become In Demand On The <span>Job Market</span> Today!
                     </h2>
-                    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 md:gap-30px mt-8 sm:mt-50px">
+                    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 md:gap-30px mt-8 sm:mt-50px">
                         <!-- Services Card -->
                         <div class="_edumy_services_card before:bg-[#F34334]">
-                            <img src="./assets/images/services/icon-01.png" alt="icon-01">
+                            <img src="./assets/images/services/icon-01.png" alt="icon">
                             <h6 class="text-dark text-xl md:text-2xl font-medium ">Design</h6>
                         </div>
                         <!-- Services Card -->
                         <div class="_edumy_services_card before:bg-[#E32263]">
-                            <img src="./assets/images/services/icon-02.png" alt="icon-01">
-                            <h6 class="text-dark text-xl md:text-2xl font-medium ">Design</h6>
+                            <img src="./assets/images/services/icon-02.png" alt="icon">
+                            <h6 class="text-dark text-xl md:text-2xl font-medium ">Programming</h6>
                         </div>
                         <!-- Services Card -->
                         <div class="_edumy_services_card before:bg-[#9A2AB0]">
-                            <img src="./assets/images/services/icon-03.png" alt="icon-01">
+                            <img src="./assets/images/services/icon-03.png" alt="icon">
                             <h6 class="text-dark text-xl md:text-2xl font-medium ">Design</h6>
                         </div>
                         <!-- Services Card -->
                         <div class="_edumy_services_card before:bg-[#693BB7]">
-                            <img src="./assets/images/services/icon-04.png" alt="icon-01">
+                            <img src="./assets/images/services/icon-04.png" alt="icon">
                             <h6 class="text-dark text-xl md:text-2xl font-medium ">Design</h6>
                         </div>
                         <!-- Services Card -->
                         <div class="_edumy_services_card before:bg-[#00978B]">
-                            <img src="./assets/images/services/icon-05.png" alt="icon-01">
+                            <img src="./assets/images/services/icon-05.png" alt="icon">
                             <h6 class="text-dark text-xl md:text-2xl font-medium ">Design</h6>
                         </div>
                         <!-- Services Card -->
                         <div class="_edumy_services_card before:bg-[#4BB04E]">
-                            <img src="./assets/images/services/icon-06.png" alt="icon-01">
+                            <img src="./assets/images/services/icon-06.png" alt="icon">
                             <h6 class="text-dark text-xl md:text-2xl font-medium ">Design</h6>
                         </div>
                         <!-- Services Card -->
                         <div class="_edumy_services_card before:bg-[#8BC24D]">
-                            <img src="./assets/images/services/icon-07.png" alt="icon-01">
+                            <img src="./assets/images/services/icon-07.png" alt="icon">
                             <h6 class="text-dark text-xl md:text-2xl font-medium ">Design</h6>
                         </div>
                         <!-- Services Card -->
                         <div class="_edumy_services_card before:bg-[#C5DC39]">
-                            <img src="./assets/images/services/icon-08.png" alt="icon-01">
+                            <img src="./assets/images/services/icon-08.png" alt="icon">
                             <h6 class="text-dark text-xl md:text-2xl font-medium ">Design</h6>
                         </div>
                     </div>
@@ -280,7 +280,7 @@
                                 alt="course-card-image-01.png"
                                 class="rounded-xl duration-300 group-hover:scale-110 w-full">
                         </div>
-                        <div>
+                        <div class="py-1">
                             <div class="flex items-center justify-between">
                                 <span class="_edumay_course_card_category sm:text-lg">
                                     Design
@@ -646,7 +646,7 @@
                     </div>
 
                     <!-- Card Section  -->
-                    <div class="swiper ui-ux-swiper mt-8 lg:mt-12 p-1">
+                    <div class="swiper ui-ux-swiper mt-8 lg:mt-12 py-1">
                         <div class="swiper-wrapper">
                             <!-- Course Card Edumy slide-->
                             <div class="swiper-slide">
@@ -1175,7 +1175,7 @@
                         </div>
                     </div>
                     <!-- Card Section  -->
-                    <div class="swiper web-development-swiper mt-8 lg:mt-12 p-1">
+                    <div class="swiper web-development-swiper mt-8 lg:mt-12 py-1">
                         <div class="swiper-wrapper">
                             <!-- Course Card Edumy slide-->
                             <div class="swiper-slide">
